# hs-socket-check

./: CHANGELOG.md  Dockerfile  README.md  build-img.sh  doc-web.sh  example.sh  fmt.sh  hs-socket-check.cabal
app/: Main.hs
src/: SocketCheck.hs
