cabal-version:      3.14
name:               hs-socket-check
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror

executable hs-socket-check
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.0 && < 5.0,
        hs-socket-check,
    hs-source-dirs:   app
    default-language: GHC2021

library
    import:           warnings
    exposed-modules:  SocketCheck
    build-depends:
        base >= 4.14 && < 5,
        network >=3.0 && < 5.0,
    hs-source-dirs:   src
    default-language: GHC2021
